--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,103 @@ DARK BLUE: #1D3557
 body {
     margin: 0;
     text-align: center;
+    font-family: "Spinnaker", serif;
 }
 
 img {
     width: 100px;
+}
+
+#hero{
+    background-image: url("/images/ibadan.jpg");
+    height: 400px;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+h1{
+    /* font-family: Arial; */
+    font-size: 62px;
+    font-weight: 700;
+    line-height: 37px;
+    background-color: #6B705C;
+    padding: 20px 10px;
+    border-radius: 5px;
+    color: #e6e6e6;
+    margin-bottom: 0;
+    box-shadow: 0 0 5px black;
+}
+
+h2{
+    /* font-family: Arial; */
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 22px;
+    background-color: #CB997E;
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
+    box-shadow: 0 0 5px black;
+}
+
+h3{
+    /* font-family: Arial; */
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 28px;
+    margin-top: 40px;
+}
+
+#activities-card{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.card{
+    width: 200px;
+    box-shadow: 0 0 5px black;
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 20px;
+}
+
+.card h4{
+    /* font-family: Arial; */
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 18px;
+}
+
+.card p{
+    /* font-family: Arial; */
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 18px;
+}
+
+.card-img{
+    border-radius: 50%;
+}
+
+.guide{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    width: 400px;
+    margin: 50px auto;
+    background-color: #DDBEA9;
+    padding: 20px 15px;
+    border-radius: 10px;
+    color: #6B705C;
+    border-bottom: 6px solid #6B705C;
+}
+
+#guide-img{
+    width: 180px;
+    margin-right: 7px;
+    border-radius: 10px;
 }
